--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ video {
 }
 
 .video-uploader {
-  color: white;
+  color: green;
   background-color: black;
   padding: 5px;
   text-align: center;
